se arregla problema con boton de ingreso

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -31,25 +31,13 @@
           </p>
         </div>
         <div>
-          <button
-            class="relative group cursor-pointer text-sky-50 overflow-hidden h-16 w-64 rounded-md bg-teal-800 p-2 flex justify-center items-center font-extrabold">
-
-            <div
-              class="absolute top-3 right-20 group-hover:top-12 group-hover:-right-12 z-10 w-40 h-40 rounded-full group-hover:scale-150 group-hover:opacity-50 duration-500 bg-teal-900">
-            </div>
-            <div
-              class="absolute top-3 right-20 group-hover:top-12 group-hover:-right-12 z-10 w-32 h-32 rounded-full group-hover:scale-150 group-hover:opacity-50 duration-500 bg-teal-800">
-            </div>
-            <div
-              class="absolute top-3 right-20 group-hover:top-12 group-hover:-right-12 z-10 w-24 h-24 rounded-full group-hover:scale-150 group-hover:opacity-50 duration-500 bg-teal-700">
-            </div>
-            <div
-              class="absolute top-3 right-20 group-hover:top-12 group-hover:-right-12 z-10 w-14 h-14 rounded-full group-hover:scale-150 group-hover:opacity-50 duration-500 bg-teal-600">
-            </div>
-
-            <p class="z-10"><a href="/auth/login" class="text-sky-50">Ingresa</a></p>
-          </button>
-
+          <a href="/auth/login" class="relative group cursor-pointer text-sky-50 overflow-hidden h-16 w-64 rounded-md bg-teal-800 p-2 flex justify-center items-center font-extrabold">
+            <div class="absolute top-3 right-20 group-hover:top-12 group-hover:-right-12 z-10 w-40 h-40 rounded-full group-hover:scale-150 group-hover:opacity-50 duration-500 bg-teal-900"></div>
+            <div class="absolute top-3 right-20 group-hover:top-12 group-hover:-right-12 z-10 w-32 h-32 rounded-full group-hover:scale-150 group-hover:opacity-50 duration-500 bg-teal-800"></div>
+            <div class="absolute top-3 right-20 group-hover:top-12 group-hover:-right-12 z-10 w-24 h-24 rounded-full group-hover:scale-150 group-hover:opacity-50 duration-500 bg-teal-700"></div>
+            <div class="absolute top-3 right-20 group-hover:top-12 group-hover:-right-12 z-10 w-14 h-14 rounded-full group-hover:scale-150 group-hover:opacity-50 duration-500 bg-teal-600"></div>
+            <p class="z-10">Ingresa</p>
+          </a>
         </div>
       </div> 
       <div class="flex items-center justify-center -mx-4 lg:pl-8">
